# genie-worksheets

./: .dockerignore  .env.sample  .gitignore  Dockerfile  MANIFEST.in  README.md  dev.sample.env  docker-compose.yml  funds.json  llm_config.example.yaml  mkdocs.yml  model_config.yaml  pyproject.toml
docs/: agent_policy.md  chainlite_config_guide.md  course_enrollment.md  dialogue_state.md  examples.md  getting_started.md  index.md  installation.md  prompt.md
docs/api/: agent.md  environment.md  from_spreadsheet.md  knowledge.md  utils.md
experiments/agents/apartment_schedule/: spreadsheet.py
experiments/agents/apartment_search/: spreadsheet.py
experiments/agents/bank_balance/: spreadsheet.py
experiments/agents/bank_fraud/: spreadsheet.py
experiments/agents/course_assistant/: spreadsheet.py
experiments/agents/course_enroll/: api.py  course_enroll.py  main.py  spreadsheet.py  table_schema.txt
experiments/agents/doctor_followup/: spreadsheet.py
experiments/agents/doctor_schedule/: spreadsheet.py
experiments/agents/hotel_book/: spreadsheet.py
experiments/agents/hotel_search/: spreadsheet.py
experiments/agents/hotel_service_request/: spreadsheet.py
experiments/agents/meeting_schedule/: spreadsheet.py
experiments/agents/plane_book/: spreadsheet.py
experiments/agents/plane_search/: spreadsheet.py
experiments/agents/servicebot/: spreadsheet.py
experiments/agents/ticket_submission/: main.py  ticket_submission.py
experiments/agents/tipbot/: spreadsheet.py  worksheets.py
experiments/agents/tripbot/: spreadsheet.py
experiments/agents/triviabot/: spreadsheet.py
experiments/agents/yelpbot/: custom_suql.py  main.py  spreadsheet.py  worksheets.py  yelpbot.py
experiments/baselines/: gpt_course_enroll.py  gpt_servicenow.py  gpt_yelpbot.py  starv2_bank_fraud_report.py  starv2_trip.py  starv2_trivia.py
experiments/domain_agents/course_enroll/: config.yaml  course_enroll.py  course_enrollment.csv  course_enrollment.json  examples.txt  instructions.txt  starting_prompt.md  test_policy.py  test_runtime.py
experiments/domain_agents/investment_agent/: config.yaml  instructions.txt  investment_agent.py  sample_conv.md  starting_prompt.md  table_schema.txt  test_policy.py
experiments/domain_agents/ticket_submission/: ticket_submission.py
experiments/domain_agents/yelpbot/: examples.txt  instructions.txt  table_schema.txt  (+1 more)
experiments/sample_prompts/: response_generator.prompt  semantic_parser.prompt
experiments/starv2_agents/: StarV2.md
frontend/course_enroll/: app_course_enroll.py
frontend/restaurant/: app_restaurant.py  chainlit.md
frontend/ticket_submission/: app_service_now.py  app_service_now_gpt4.py  chainlit.md
scripts/: calculate_cost.py
scripts/mutual_funds_scraper/: mutual_fund_scraper.py  mutual_funds.json  tickers.txt
src/webapp/: app.py
src/worksheets/: __init__.py  agent.py  annotation_utils.py  environment.py  from_spreadsheet.py  interface_utils.py  knowledge.py
tests/: test_configs.py
web/: index.html
web/docs/: 404.html  index.html  objects.inv  sitemap.xml
(+358 files in other folders)
