[project]
name = "genie-worksheets"
version = "1.0.0b3"
description = "Genie Worksheets: A high-level, expressive and declarative specification for creating knowledge agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Harshit Joshi", email = "harshitj@stanford.edu"},
]
maintainers = [
    {name = "Harshit Joshi", email = "harshitj@stanford.edu"}
]
keywords = ["llm", "agents", "conversational-ai", "knowledge-agents", "worksheets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "google-api-python-client>=2.149.0",
    "google-auth>=2.35.0",
    "json-repair>=0.30.0",
    "loguru>=0.7.2",
    "pandas>=2.2.3",
    "termcolor>=2.5.0",
    "toml>=0.10.2",
    "sql-metadata>=2.13.0",
    "suql>=1.1.8",
    "grandalf>=0.8",
    "langchain-openai>=0.1.7",
    "langgraph >= 0.6.0",
    "langchain-together>=0.1.1",
    "chainlit>=2.0.0",
    "beautifulsoup4>=4.13.4",
    "rich>=14.0.0",
    "redis >= 6.4.0"
]

[project.urls]
Homepage = "https://ws.genie.stanford.edu/"
Documentation = "https://ws.genie.stanford.edu/docs/"
Repository = "https://github.com/stanford-oval/genie-worksheets"
"Bug Tracker" = "https://github.com/stanford-oval/genie-worksheets/issues"
"Research Paper" = "https://arxiv.org/abs/2407.05674"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "build>=1.2.2.post1",
    "jupyter>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worksheets"]
[tool.hatch.build]
include = ["src/worksheets"]
